# venturahr

./: .env.default  .envrc  .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  dev.Dockerfile  docker-compose.yml  python-version  setup.cfg  sonar-project.properties
backend/: conftest.py  coverage.xml  manage.py  pyproject.toml  pytest.ini  test_main.py
backend/appserver/: main_test.py
backend/candidates/: forms.py  forms_tests.py  models.py  test_forms.py  urls.py  views.py
backend/candidates/migrations/: 0001_initial.py  0002_delete_candidate_candidateuser.py
backend/candidates/templates/candidates/: base.html  home.html  login.html  register.html
backend/companies/: forms.py  forms_tests.py  models.py  urls.py  views.py
backend/companies/migrations/: 0001_initial.py  0002_companyuser.py  0003_companyrecruiteruser.py
backend/companies/templates/companies/: base.html  home.html  login.html  register.html
backend/core/: constants.py  forms.py  metrics.py  models.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/core/templates/core/: base.html  home.html  login.html  register.html
backend/fixtures/: company.py  opportunities.py  providers.py  user.py  utils.py
backend/fixtures/models/: opportunities.py  user.py
backend/opportunities/: apps.py  constants.py  forms.py  forms_tests.py  models.py  services.py  urls.py  views.py
backend/opportunities/migrations/: 0001_initial.py  0002_alter_opportunity_created_at_and_more.py  0003_alter_opportunityrequirement_opportunity.py  0004_alter_opportunityrequirement_weight.py  0005_alter_opportunity_options.py  0006_opportunityanswer_opportunityanswerrequirement.py  0007_opportunityrequirement_minimim_knowledge.py
backend/opportunities/views/: __init__.py  candidates.py  companies.py  companies_tests.py  opportunities.py  views.py
backend/templates/: 403.html  404.html  base.html  login.html  swagger-ui.html
backend/venturahr/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+28 files in other folders)
